rename `specs` to `openapi` across codebase (breaking change)