@@ -263,9 +263,9 @@ public class GenericYamlParserTest {
                             validateRequests: "yes"
                         """,
                         a -> {
-                            assertEquals(1, a.getSpecs().size());
-                            assertEquals("fruitshop-api.yml", a.getSpecs().getFirst().getLocation());
-                            assertEquals(YES, a.getSpecs().getFirst().getValidateRequests());
+                            assertEquals(1, a.getOpenapi().size());
+                            assertEquals("fruitshop-api.yml", a.getOpenapi().getFirst().getLocation());
+                            assertEquals(YES, a.getOpenapi().getFirst().getValidateRequests());
                         }
                 ),
                 ok(
@@ -278,11 +278,11 @@ public class GenericYamlParserTest {
                             validateRequests: "yes"
                         """,
                         a -> {
-                            assertEquals(2, a.getSpecs().size());
-                            assertEquals("a.yml", a.getSpecs().getFirst().getLocation());
-                            assertEquals("b.yml", a.getSpecs().get(1).getLocation());
-                            assertEquals(NO, a.getSpecs().get(0).getValidateRequests());
-                            assertEquals(YES, a.getSpecs().get(1).getValidateRequests());
+                            assertEquals(2, a.getOpenapi().size());
+                            assertEquals("a.yml", a.getOpenapi().getFirst().getLocation());
+                            assertEquals("b.yml", a.getOpenapi().get(1).getLocation());
+                            assertEquals(NO, a.getOpenapi().get(0).getValidateRequests());
+                            assertEquals(YES, a.getOpenapi().get(1).getValidateRequests());
                         }
                 )
         );
